--- a/guides/getting-started-workflows/mocking-basics.mdx
+++ b/guides/getting-started-workflows/mocking-basics.mdx
@@ -1,83 +1,75 @@
 ---
-title: "Getting Started with Mocks"
-description: "Discover how to use GoogleMock to replace real components with controllable mocks in your tests. This tutorial covers creating mock classes, using the MOCK_METHOD macro, and setting expectations for function calls."
+title: "Getting Started with GoogleMock"
+description: "An approachable walkthrough for adding GoogleMock to a project, writing your first mock classes, and leveraging core mocking workflows, including ON_CALL/EXPECT_CALL usage and common patterns."
 ---
 
-# Getting Started with Mocks
+# Getting Started with GoogleMock
 
-Unlock the power of GoogleMock by learning how to replace real components with controllable mocks in your C++ tests. This guide walks you through the essentials of creating mock classes using the `MOCK_METHOD` macro, defining mocked methods, and setting up expectations for function call behavior.
+An approachable walkthrough for adding GoogleMock to a project, writing your first mock classes, and leveraging core mocking workflows, including ON_CALL/EXPECT_CALL usage and common patterns.
 
 ---
 
-## 1. Introduction to Mocking
+## 1. Introduction
 
-Mocking is essential when testing code that depends on external components or complex objects. Instead of using actual implementations—which may be slow, non-deterministic, or incomplete—you create mock objects that mimic the interfaces and behaviors of the real objects, giving you control over their responses and interaction verification.
+GoogleMock is a powerful C++ mocking framework that lets you create mock classes for your interfaces and verify how your code interacts with these mocks. This guide focuses entirely on the **Getting Started with GoogleMock** page — helping you add GoogleMock to your project, write your first mock classes, and use essential mocking techniques such as setting default behaviors (`ON_CALL`) and expectations (`EXPECT_CALL`).
 
-GoogleMock (gMock) enables convenient, expressive mock class definitions and provides powerful tools to specify expectations for how these mocks are used.
+You'll learn how to inject and use mocks effectively, understand the semantics behind call expectations, and apply common patterns to write flexible, readable, and maintainable tests.
 
+<Tip>
+Before diving in, make sure you have a working GoogleTest + GoogleMock installation. Refer to the installation and setup sections in the documentation for your build system (CMake, Bazel, etc.).
+</Tip>
+
+---
 
 ## 2. Prerequisites
 
-Before you start:
+- **Existing project with GoogleTest/GoogleMock installed**. Include `<gmock/gmock.h>` in your test files.
+- **Basic familiarity with C++ classes and virtual functions**.
+- **An interface or abstract class to mock**. GoogleMock transformers virtual methods into mocks with `MOCK_METHOD`.
 
-- Your project should be set up to include GoogleMock headers (`#include <gmock/gmock.h>`).
-- Basic understanding of C++ inheritance and virtual functions.
-- Familiarity with writing unit tests using GoogleTest is helpful but not mandatory.
+If you are just getting started with GoogleTest, review the [`Writing Your First Test`](https://google.github.io/googletest/gmock_for_dummies.html) guide first.
 
+---
 
-## 3. Creating Mock Classes
+## 3. Workflow Overview
 
-### 3.1 Define the Mock Class
+### What Will You Achieve?
 
-To create a mock for an interface or class, derive a new class and use the `MOCK_METHOD` macro in its **public** section for all methods you want to mock.
+By the end of this guide, you will be able to:
+- Define your own mock classes using `MOCK_METHOD` macro
+- Set default behaviors for mock methods using `ON_CALL`
+- Write and verify expectations about method calls using `EXPECT_CALL`
+- Use cardinality, sequences, and actions to control mock behavior and validate call order
 
-The syntax of `MOCK_METHOD` is:
+### Time Estimate
 
-```cpp
-MOCK_METHOD(ReturnType, MethodName, (ArgTypes...), (Qualifiers));
-```
+Expect about 30-45 minutes to understand and apply these concepts thoroughly in your tests.
 
-- `ReturnType`: the return type of the method.
-- `MethodName`: the method's name.
-- `(ArgTypes...)`: a parenthesized, comma-separated list of argument types.
-- `(Qualifiers)`: optional parentheses-enclosed list such as `override`, `const`, `noexcept`.
+### Difficulty Level
 
+Beginner to Intermediate
 
-### 3.2 Common Qualifiers
+---
 
-- `override`: marks the method as overriding a virtual method.
-- `const`: if mocking a `const` method.
-- `noexcept`: if the original method is marked with `noexcept`.
-- More qualifiers like `Calltype(STDMETHODCALLTYPE)` and `ref(...)` are supported for specialized use cases.
+## 4. Step-by-Step Instructions
 
-
-### 3.3 Handling Types with Commas
-
-If your return type or arguments contain commas (e.g., `std::pair<int, int>`), wrap the type itself in parentheses or use a type alias:
-
-```cpp
-class MockFoo {
- public:
-  // With parentheses
-  MOCK_METHOD((std::pair<int, int>), GetPair, ());
-
-  // Or using type aliases
-  using PairType = std::pair<int, int>;
-  MOCK_METHOD(PairType, GetPair, ());
-};
-```
-
-
-### 3.4 Mocking Private or Protected Methods
-
-Always declare mock methods in the **public** section, even if the original method is `private` or `protected`. This enables `EXPECT_CALL` and `ON_CALL` to interact with the mock properly.
-
-
-### 3.5 Example Mock Class
+<Steps>
+<Step title="Add GoogleMock to Your Test Source">
+Import GoogleMock in your test files to access all utilities.
 
 ```cpp
 #include <gmock/gmock.h>
+#include <gtest/gtest.h>
+```
 
+Expected Result: No compilation errors and all mocking utilities are available.
+</Step>
+
+<Step title="Define a Mock Class Using MOCK_METHOD">
+Create a mock class inheriting from the interface you want to mock, and declare mocked methods with `MOCK_METHOD` inside the `public:` section.
+
+Example:
+```cpp
 class Turtle {
  public:
   virtual ~Turtle() {}
@@ -96,116 +88,201 @@ class MockTurtle : public Turtle {
 };
 ```
 
+Note:
+- Use `(const, override)` for const virtual methods.
+- Wrap types with commas in parentheses or typedefs if necessary.
 
-## 4. Using Mocked Methods in Tests
+Expected Result: You have a mock class ready for testing.
+</Step>
 
-### 4.1 Setting Expectations: `EXPECT_CALL`
-
-Specify how you expect the mock’s methods to be called using `EXPECT_CALL`. Basic usage:
-
-```cpp
-EXPECT_CALL(mock_object, MethodName(matchers...))
-    .Times(cardinality)
-    .WillOnce(action)
-    .WillRepeatedly(action);
-```
-
-- `matchers...`: Matchers define acceptable argument values (e.g., specific values, or `_` for any).
-- `Times`: how often the method is expected to be called (e.g., `Times(1)`, `AtLeast(2)`, `AnyNumber()`).
-- `WillOnce`: action to perform on the first matching call.
-- `WillRepeatedly`: action after all `WillOnce` actions are used.
-
-
-### 4.2 Setting Default Behavior: `ON_CALL`
-
-Use `ON_CALL` to specify default behavior **without setting expectations** on call counts:
+<Step title="Set Default Behavior Using ON_CALL">
+`ON_CALL` configures the default behavior of your mock methods when they are called but no specific expectation is set.
 
 ```cpp
-ON_CALL(mock_object, MethodName(matchers...))
-    .WillByDefault(action);
+MockTurtle mock_turtle;
+ON_CALL(mock_turtle, GetX()).WillByDefault(::testing::Return(42));
 ```
 
-This is useful when you want to provide realistic behavior but don't want to enforce exact call counts.
+Expected Result: Mock returns 42 whenever `GetX()` is called and no `EXPECT_CALL` is in place.
 
+<Tip>
+Use `ON_CALL` for defining common behavior that applies across many tests, avoiding over-specification.
+</Tip>
+</Step>
 
-### 4.3 Using Common Matchers
-
-- `_`: Matches any argument.
-- `Eq(value)`: Matches equality to `value` (implicit when you pass a literal).
-- `NotNull()`, `IsNull()`: For pointer arguments.
-- `Ge(n)`, `Le(n)`, `Lt(n)`, `Gt(n)`, etc.: Comparisons.
-
-
-### 4.4 Example: Setting Expectations and Actions
+<Step title="Set Expectations Using EXPECT_CALL">
+Use `EXPECT_CALL` to specify how many times, with which arguments, and in which order you'd expect methods to be called.
 
 ```cpp
-using ::testing::_;
-using ::testing::Return;
-using ::testing::AtLeast;
-
-MockTurtle turtle;
-
-EXPECT_CALL(turtle, Forward(100))
-    .Times(AtLeast(1));
-EXPECT_CALL(turtle, GetX())
-    .WillOnce(Return(10))
-    .WillRepeatedly(Return(20));
-
-// Exercise code that interacts with turtle...
-int pos = turtle.GetX();  // Returns 10 on first call, 20 thereafter
+EXPECT_CALL(mock_turtle, Forward(::testing::Ge(10)))
+    .Times(2)
+    .WillRepeatedly(::testing::Return());
 ```
 
+Expected Result: The test will fail if `Forward()` is not called at least twice with argument >= 10.
 
-## 5. Best Practices
+Decision Point:
+- If you want to verify call order, consider using `InSequence`.
+- Choose argument matchers carefully to avoid brittle tests.
+</Step>
 
-- **Use `ON_CALL` for default behaviors** and only add `EXPECT_CALL` where you intend to verify calls.
-- **Avoid over-specifying arguments** unless necessary; use `_` to generalize.
-- When mocking overloaded methods, mock all relevant overloads and use `using` to avoid hiding base versions.
-- Use **sequences** (`InSequence`) when call order matters.
-- Use **NiceMock**, **NaggyMock**, or **StrictMock** to control warnings and failures on uninteresting calls.
-- Always put `EXPECT_CALL` before the code that triggers the mocked method.
+<Step title="Exercise Your Code Using Mock Objects">
+Pass the mock objects to the code under test and execute the logic that triggers method calls.
 
+```cpp
+Painter painter(&mock_turtle);
+painter.DrawLine(20);
+```
 
-## 6. Common Pitfalls
+Expected Result: Your mock receives calls and GoogleMock verifies expectations.
+</Step>
 
-- Mock methods must be in the **public** section to be usable with `EXPECT_CALL`.
-- Incorrectly wrapping types with commas may cause macro parsing errors.
-- Missing `override` or `const` qualifiers may cause the mock method not to override the base method correctly.
-- Setting multiple contradictory `EXPECT_CALL` statements without understanding precedence may cause unexpected failures.
-- Forgetting that expectations are **sticky** unless `.RetiresOnSaturation()` is used.
+<Step title="Run Tests and Confirm Behavior">
+Run your test binary. GoogleMock automatically verifies all expectations are satisfied when mocks are destroyed.
 
+Observe test output for failures related to unmet expectations or unexpected calls.
+</Step>
 
-## 7. Troubleshooting
-
-- **Uninteresting call warnings:** Use `NiceMock<T>` to suppress if expected, or add a catch-all `EXPECT_CALL(mock, Method(_)).Times(AnyNumber());`.
-- **Unexpected calls:** Verify your matchers and call order; enable `--gmock_verbose=info` to trace calls.
-- **Compilation warnings/errors:** Verify `MOCK_METHOD` syntax matches exactly including qualifiers.
-- Use `Mock::VerifyAndClearExpectations(&mock_object)` to manually verify expectations before mock destruction if needed.
-
-
-## 8. Next Steps
-
-After mastering basic mocking:
-
-- Explore advanced matchers for complex argument validation.
-- Use sequences and `After` clauses for partial ordering of calls.
-- Define custom actions to simulate complex behaviors.
-- Utilize delegation techniques to combine real objects and mocks.
-- Dive into the [gMock Cookbook](https://google.github.io/googletest/gmock_cook_book.html) and [Mocks Reference](https://google.github.io/googletest/reference/mocking.html) for deeper insights.
-
+</Steps>
 
 ---
 
-## Additional Resources
+## 5. Common Patterns & Practical Tips
 
-- [GoogleMock Mocking Reference](https://google.github.io/googletest/reference/mocking.html)
-- [gMock for Dummies Tutorial](https://google.github.io/googletest/gmock_for_dummies.html)
-- [gMock Cookbook](https://google.github.io/googletest/gmock_cook_book.html)
-- [gMock Cheat Sheet](https://google.github.io/googletest/gmock_cheat_sheet.html)
-- [GoogleTest README and Setup](https://github.com/google/googletest)
+### Using Argument Matchers
 
+- Match specific values directly: `EXPECT_CALL(mock, Foo(5))`
+- Ignore arguments with `_`: `EXPECT_CALL(mock, Foo(_))`
+- Combine matchers for flexible matching: `EXPECT_CALL(mock, Foo(::testing::AllOf(::testing::Ge(0), ::testing::Le(10))))`
 
-<CalloutTitle value="Quick Start Tip" />
-<Tip>
-Use the `MOCK_METHOD` macro inside your mock class's **public** section for each virtual method you want to mock. Then use `EXPECT_CALL` to set expectations **before** exercising code that uses the mock.
-</Tip>
+### Controlling Call Cardinality
+
+- `Times(n)` expects exactly n calls
+- `Times(::testing::AnyNumber())` allows any number of calls
+- `Times(::testing::AtLeast(n))` enforces minimum calls
+
+### Ordering Expectations
+
+- Use `InSequence` to enforce order of calls
+- Use `After` to require calls happen after others
+
+### Default vs Expected Calls
+
+- `ON_CALL` defines behavior but does NOT verify call
+- `EXPECT_CALL` defines behavior AND verifies call happens
+- Prefer `ON_CALL` for setup, `EXPECT_CALL` for important call verifications
+
+### NiceMock, NaggyMock, StrictMock
+
+Which mock wrapper you choose affects handling uninteresting calls:
+- `NiceMock` suppresses warnings about unexpected calls
+- `NaggyMock` (default) warns on uninteresting calls
+- `StrictMock` fails on uninteresting calls
+
+### Mocking Overloaded and Const Methods
+
+- Mock all overloads you want to test
+- For const methods, use `(const, override)` qualifier
+- Use `Const(mock)` wrapper to set expectations on const overload
+
+### Common Pitfalls
+
+- Set expectations before exercising mocks
+- Avoid over-specifying arguments
+- Remember expectations are ‘sticky’ unless retired
+
+---
+
+## 6. Troubleshooting
+
+<AccordionGroup title="Common Issues in Getting Started with GoogleMock">
+<Accordion title="Mock Method Not Called as Expected">
+Check that your `EXPECT_CALL` is set before the method is called.
+Verify argument matchers correctly match the actual call.
+Consider running tests with `--gmock_verbose=info` to see call traces.
+</Accordion>
+<Accordion title="Uninteresting Function Call Warning">
+Means a mock method was called without expectation.
+Suppress by adding a catch-all `EXPECT_CALL(...).Times(AnyNumber())` or by using `NiceMock`.
+</Accordion>
+<Accordion title="Compilation Errors on MOCK_METHOD">
+Ensure virtual methods have proper signatures.
+Wrap argument or return types with commas inside parentheses or use type aliases.
+Use `(override)` and `(const, override)` qualifiers consistently.
+</Accordion>
+<Accordion title="Mismatch on Overloaded Methods">
+Use explicit argument matcher lists to disambiguate overloads.
+Use `Const` wrapper for const overloads.
+</Accordion>
+</AccordionGroup>
+
+---
+
+## 7. Examples
+
+### Writing a Simple Mock and Test
+
+```cpp
+#include <gmock/gmock.h>
+#include <gtest/gtest.h>
+
+class Turtle {
+ public:
+  virtual ~Turtle() {}
+  virtual void PenUp() = 0;
+  virtual void Forward(int distance) = 0;
+  virtual int GetX() const = 0;
+};
+
+class MockTurtle : public Turtle {
+ public:
+  MOCK_METHOD(void, PenUp, (), (override));
+  MOCK_METHOD(void, Forward, (int distance), (override));
+  MOCK_METHOD(int, GetX, (), (const, override));
+};
+
+TEST(PaintTest, TestForwardCalls) {
+  MockTurtle mock_turtle;
+  ON_CALL(mock_turtle, GetX()).WillByDefault(::testing::Return(10));
+
+  EXPECT_CALL(mock_turtle, Forward(::testing::Ge(5)))
+      .Times(1);
+
+  // Code exercising mock
+  mock_turtle.Forward(7);
+
+  EXPECT_EQ(mock_turtle.GetX(), 10);
+}
+```
+
+### Using InSequence for Ordered Calls
+
+```cpp
+{
+  ::testing::InSequence seq;
+  EXPECT_CALL(mock_turtle, PenUp());
+  EXPECT_CALL(mock_turtle, Forward(10));
+  EXPECT_CALL(mock_turtle, PenDown());
+}
+```
+
+This enforces these calls happen in the above order.
+
+---
+
+## 8. Next Steps & Related Content
+
+- Explore the [gMock Cookbook](https://google.github.io/googletest/gmock_cook_book.html) for advanced techniques.
+- Read [Matchers Reference](https://google.github.io/googletest/gmock_matchers.html) to learn how to write flexible call argument checks.
+- Consult [gMock API Reference](https://google.github.io/googletest/reference/mocking.html) for detailed macro and class documentation.
+- Review [Writing Your First Unit Test](https://google.github.io/googletest/gmock_for_dummies.html) and [Quick Start Journey](https://google.github.io/googletest/overview/features-workflows/quick-start-journey.html) for end-to-end workflow.
+
+---
+
+For complete context and best practices, always ensure your mocks:
+- Have virtual destructors in base classes.
+- Use `MOCK_METHOD` in public sections.
+- Setup expectations before code execution.
+- Avoid over-specification of argument matchers.
+
+---
